--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "user-config",
+  "name": "home-folder",
   "version": "0.1.0",
-  "description": "Helper for make service config in home folder",
+  "description": "Helper for make and use project home folder",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nim579/user-config.git"
+    "url": "git+https://github.com/nim579/home-folder.git"
   },
   "keywords": [
     "tools",
@@ -22,7 +22,7 @@
   "author": "Nick Iv",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/nim579/user-config/issues"
+    "url": "https://github.com/nim579/home-folder/issues"
   },
-  "homepage": "https://github.com/nim579/user-config#readme"
+  "homepage": "https://github.com/nim579/home-folder#readme"
 }
