--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "home-folder",
   "version": "0.1.1",
   "description": "Helper for make and use project home folder",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/nim579/home-folder/issues"
   },
-  "homepage": "https://github.com/nim579/home-folder#readme"
+  "homepage": "https://github.com/nim579/home-folder#readme",
+  "devDependencies": {
+    "@types/node": "^20.11.5",
+    "typescript": "^5.3.3"
+  }
 }
